--- a/Image sequence style transfer/style transfer.ipynb
+++ b/Image sequence style transfer/style transfer.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "base_image_path = '/my_data/base_10000.png'\n",
     "\n",
-    "style_reference_image_path = 'style4.jpg'\n",
+    "style_reference_image_path = 'style.jpg'\n",
     "\n",
     "result_prefix = 'result'\n",
     "\n",
